--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
    <main id="container">
      <div class="card"> 
         <img src="image-qr-code.png" alt="A qr code image">
-        <h2> Improve your front-end skills.<br>by building projects</h2>
+        <h2> Improve your front-end skills. by building projects</h2>
         <p>Scan the QR code to visit Front-end Mentor and take your coding skills to the next level.</p>
      </div>
    </main>
